--- a/static/less/zen-mode.less
+++ b/static/less/zen-mode.less
@@ -57,8 +57,13 @@ html.zen-mode {
 			padding-left: 15px;
 			padding-right: 15px;
 		}
-		.write-preview-container > div {
-			padding: 0;
+		.write-preview-container {
+			margin-bottom: 0;
+
+			> div {
+				padding: 0;
+				margin: 0;
+			}
 		}
 	}
 }
